@@ -14,10 +14,10 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 89153227d4571ab178be8faa2d3eee0a0ef9096f ChangeLog
+SHA1 7ae51d435080a24aca2df7d82a275602cd7ba778 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 536d4ce30b1934be585da55e463477877c31fe8c MANIFEST
-SHA1 cba5e0ddcaefa8b5eaf915d916c048686bc7a545 META.yml
+SHA1 1be0379af9e0f3dcf74164d2a94102e342882e35 META.yml
 SHA1 85f9401b2c422cd079d521911905670a71d266c1 Makefile.PL
 SHA1 2af679880fb8ac967e5d63069f8ec3b3508425d3 README
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
@@ -31,13 +31,13 @@ SHA1 b721c93ca5bc9a6aa863b49af15f1b1de6125935 inc/Module/Install/Makefile.pm
 SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 cc67f8d46607d33d722ceeaa833bd930d3cd1b2e lib/Term/Menus.pm
+SHA1 733624b73fc21a2a4d14787640e0c301f82ee155 lib/Term/Menus.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 ded9def7d10cf71606da96112acc159e0aa9a582 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAk8QnUsACgkQ2NfPFcKvV2AMLgCfffSVsy2H9bT6aO2N1wnlch35
-hksAnAkoBVwJWSgt8bNnJXIoQFpoppT8
-=dnvp
+iEYEARECAAYFAk8R/xwACgkQ2NfPFcKvV2BP/ACdFGlPzsfbQzZ3+kw5mM1Kt28y
+jKYAn3fMh/eLOchC99F0u1+CENvF8oFM
+=qFjW
 -----END PGP SIGNATURE-----
