@@ -1,3 +1,9 @@
+2012-01-14  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Fixed navigation markers when going backwards in
+          multi-level menus.
+
+
 2012-01-09  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Fixed navigation when going backwards in multi-level
